--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 
 Todo:
-  ☐ User Image and Bos Image Add
+  ✔ User Image and Bos Image Add @done(21-01-24 00:05)
   ☐ User Fire Button Add
   ☐ User Fire and bang the box
 
