--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 
 Todo:
   ✔ User Image and Bos Image Add @done(21-01-24 00:05)
+  ☐ Game character district to maps
   ☐ User Fire Button Add
   ☐ User Fire and bang the box
+  ☐ Boss Move until vertical way
 
