--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 
 Todo:
   ✔ User Image and Bos Image Add @done(21-01-24 00:05)
-  ☐ Game character district to maps
-  ☐ User Fire Button Add
+  ✔ Game character district to maps @done(21-02-13 10:03)
+  ✔ User Fire Button Add @done(21-02-13 10:03)
   ☐ User Fire and bang the box
   ☐ Boss Move until vertical way
 
